--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -55,7 +55,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <connections>
-                                    <segue destination="szq-GH-tTU" kind="modal" id="ekA-hM-h0B"/>
+                                    <segue destination="szq-GH-tTU" kind="modal" identifier="segueFirstVCToSecond" id="ekA-hM-h0B"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -79,32 +79,69 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jFe-Dy-3ty">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="229" id="F31-5g-wbk"/>
-                                    <constraint firstAttribute="width" constant="260" id="aYF-Lb-YtD"/>
+                                    <constraint firstAttribute="width" constant="299" id="Fr3-7h-zUy"/>
+                                    <constraint firstAttribute="height" constant="343" id="eaH-iw-A4W"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8VF-zI-37P">
-                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
-                                <state key="normal">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8VF-zI-37P">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="6hA-IS-4xD"/>
+                                    <constraint firstAttribute="width" constant="116" id="QWv-oh-gp8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <state key="normal" title="Add Image">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="selectImageButtonClicked:" destination="szq-GH-tTU" eventType="touchUpInside" id="HIu-Oz-Nm8"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Congratulations" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1T-d4-2hM">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="131" id="JnY-Ln-ZI1"/>
+                                    <constraint firstAttribute="height" constant="21" id="cir-M3-pPP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbJ-gR-aeo">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="171" id="o3g-le-ghf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Preview - review information on the post" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbG-aK-6s1">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="centerX" secondItem="saa-9n-xt3" secondAttribute="centerX" type="default" id="6PP-K1-w08"/>
-                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="55" id="dcj-Us-mLu"/>
-                            <constraint firstAttribute="trailing" secondItem="8VF-zI-37P" secondAttribute="trailing" constant="37" id="ePw-bT-4DS"/>
-                            <constraint firstItem="8VF-zI-37P" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="250" id="pti-hZ-T0N"/>
+                            <constraint firstItem="8VF-zI-37P" firstAttribute="top" secondItem="sbJ-gR-aeo" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="9fo-ar-Z91"/>
+                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="baseline" secondItem="r1T-d4-2hM" secondAttribute="baseline" type="default" id="C2D-8X-Sqb"/>
+                            <constraint firstItem="r1T-d4-2hM" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="13" id="Ksn-m2-is9"/>
+                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="top" secondItem="r1T-d4-2hM" secondAttribute="top" type="default" id="P7y-UG-PdC"/>
+                            <constraint firstItem="NbG-aK-6s1" firstAttribute="centerX" secondItem="saa-9n-xt3" secondAttribute="centerX" type="default" id="WHX-3j-YRN"/>
+                            <constraint firstItem="NbG-aK-6s1" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="14" id="cmQ-kV-9ZB"/>
+                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="centerY" secondItem="saa-9n-xt3" secondAttribute="centerY" type="default" id="eFA-e7-0nl"/>
+                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="39" id="eiZ-O6-rqc"/>
+                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="10" id="gW3-Xf-Sq8"/>
+                            <constraint firstItem="8VF-zI-37P" firstAttribute="trailing" secondItem="NbG-aK-6s1" secondAttribute="trailing" type="default" id="isG-N8-NN9"/>
+                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="105" id="mxP-I4-bsv"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="SNH-ey-WVR"/>
                     <connections>
                         <outlet property="image" destination="jFe-Dy-3ty" id="9x9-xh-udn"/>
+                        <outlet property="labelUserName" destination="sbJ-gR-aeo" id="37u-rU-uEL"/>
                         <outlet property="selectImage" destination="8VF-zI-37P" id="9oM-qV-CVX"/>
                     </connections>
                 </viewController>
@@ -213,6 +250,8 @@
             <relationships>
                 <relationship kind="action" name="selectImageButtonClicked:"/>
                 <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="imagePicker" candidateClass="UIImagePickerController"/>
+                <relationship kind="outlet" name="labelUserName" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="selectImage" candidateClass="UIButton"/>
             </relationships>
         </class>
