--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -9,7 +9,7 @@
             <objects>
                 <viewController title="First" id="2" customClass="MQFirstViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="z5K-ck-KJV">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <navigationBar key="tableHeaderView" contentMode="scaleToFill" barStyle="blackOpaque" id="wf9-kc-X0e">
@@ -83,23 +83,6 @@
                                     <constraint firstAttribute="width" constant="318" id="uVM-bT-Pdf"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8VF-zI-37P">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="27" id="GmQ-ee-qjE"/>
-                                    <constraint firstAttribute="height" constant="35" id="fbf-q9-EbX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                                <state key="normal" image="168-upload-photo-2.png">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="selectImageButtonClicked:" destination="szq-GH-tTU" eventType="touchUpInside" id="HIu-Oz-Nm8"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Congratulations" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1T-d4-2hM">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="131" id="JnY-Ln-ZI1"/>
@@ -119,7 +102,18 @@
                             </label>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SQL-3f-poU">
                                 <items>
-                                    <navigationItem title="Review Data" id="6zH-fE-tlx"/>
+                                    <navigationItem title="Review Data" id="6zH-fE-tlx">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="K2R-VA-54X">
+                                            <connections>
+                                                <segue destination="2" kind="modal" id="Nnq-QF-icA"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="wFr-hc-Azj">
+                                            <connections>
+                                                <action selector="selectImageButtonClicked:" destination="szq-GH-tTU" id="t5O-sx-rXS"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                         </subviews>
@@ -127,14 +121,12 @@
                         <constraints>
                             <constraint firstItem="sbJ-gR-aeo" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="124" id="1y3-iU-c3k"/>
                             <constraint firstItem="sbJ-gR-aeo" firstAttribute="top" secondItem="r1T-d4-2hM" secondAttribute="top" type="default" id="2fp-iY-Hoq"/>
-                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="197" id="2hk-Tt-nJg"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" type="default" id="7lI-kB-ynf"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="trailing" secondItem="saa-9n-xt3" secondAttribute="trailing" type="default" id="CFM-KY-OC2"/>
-                            <constraint firstItem="8VF-zI-37P" firstAttribute="top" secondItem="sbJ-gR-aeo" secondAttribute="top" type="default" id="FBE-1c-NKj"/>
-                            <constraint firstItem="8VF-zI-37P" firstAttribute="trailing" secondItem="jFe-Dy-3ty" secondAttribute="trailing" type="default" id="FNh-ZF-ryu"/>
-                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" type="default" id="T90-wo-pjj"/>
-                            <constraint firstItem="r1T-d4-2hM" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="63" id="TFE-Ti-Ab5"/>
-                            <constraint firstItem="r1T-d4-2hM" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="6" id="da0-Zk-SL3"/>
+                            <constraint firstItem="r1T-d4-2hM" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="63" id="N5R-HC-OgR"/>
+                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="147" id="SP7-z1-2bx"/>
+                            <constraint firstItem="jFe-Dy-3ty" firstAttribute="trailing" secondItem="saa-9n-xt3" secondAttribute="trailing" type="default" id="Sdf-2u-II5"/>
+                            <constraint firstItem="r1T-d4-2hM" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="6" id="ZrZ-LH-8b4"/>
                             <constraint firstItem="sbJ-gR-aeo" firstAttribute="baseline" secondItem="r1T-d4-2hM" secondAttribute="baseline" type="default" id="oVv-8e-os6"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" type="default" id="wwh-Ey-lgo"/>
                         </constraints>
@@ -142,12 +134,12 @@
                     <connections>
                         <outlet property="image" destination="jFe-Dy-3ty" id="9x9-xh-udn"/>
                         <outlet property="labelUserName" destination="sbJ-gR-aeo" id="37u-rU-uEL"/>
-                        <outlet property="selectImage" destination="8VF-zI-37P" id="9oM-qV-CVX"/>
+                        <outlet property="selectImage" destination="wFr-hc-Azj" id="deT-zI-iSz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ziR-tI-2MG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="969" y="-1152"/>
+            <point key="canvasLocation" x="999" y="-1152"/>
         </scene>
         <!--Second View Controller - Second-->
         <scene sceneID="13">
@@ -232,12 +224,39 @@
     <resources>
         <image name="112-group.png" width="32" height="21"/>
         <image name="154-necktie.png" width="8" height="27"/>
-        <image name="168-upload-photo-2.png" width="22" height="25"/>
         <image name="91-beaker-2.png" width="20" height="24"/>
     </resources>
+    <classes>
+        <class className="MQFirstViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQFirstViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="segmentedControlIndexChanged"/>
+                <relationship kind="outlet" name="segmentedControl" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+        <class className="MQSecondViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQSecondViewController.h"/>
+        </class>
+        <class className="MQViewController1Step2" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQViewController1Step2.h"/>
+            <relationships>
+                <relationship kind="action" name="selectImageButtonClicked:"/>
+                <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="imagePicker" candidateClass="UIImagePickerController"/>
+                <relationship kind="outlet" name="labelUserName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="selectImage" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="Nnq-QF-icA"/>
+    </inferredMetricsTieBreakers>
 </document>
